<?xml version="1.0"?>
<package>
  <name>image_reader</name>
  <version>0.0.0</version>
  <description>The image_reader package</description>

  <maintainer email="chris@todo.todo">chris</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  </package>
